--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuanfei-admin",
+  "name": "vue3-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "dev:prod": "vue-cli-service serve --mode prod"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.48",
     "vue": "^3.0.0",
